--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,13 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+ipykernel = "^6.29.5"
+pandas = "^2.2.2"
+numpy = "^2.0.1"
+matplotlib = "^3.9.1"
+seaborn = "^0.13.2"
+opencv-python = "^4.10.0"
+scikit-learn = "^1.5.1"
 
 [tool.poetry.dev-dependencies]
 
