--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,13 @@ package-mode = false
 python = "^3.9"
 ipykernel = "^6.29.5"
 pandas = "^2.2.2"
-numpy = "^2.0.1"
+numpy = "<2"
 matplotlib = "^3.9.1"
 seaborn = "^0.13.2"
 opencv-python = "^4.10.0"
 scikit-learn = "^1.5.1"
+torch = {url="https://download.pytorch.org/whl/cpu/torch-2.2.0-cp39-none-macosx_10_9_x86_64.whl"}
+torchvision = {url="https://download.pytorch.org/whl/cpu/torchvision-0.17.0-cp39-cp39-macosx_10_13_x86_64.whl"}
 
 [tool.poetry.dev-dependencies]
 
