Fixed dataset builder & built the datasets for the classical ML models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ scikit-learn = "^1.5.1"
 torch = {url="https://download.pytorch.org/whl/cpu/torch-2.2.0-cp39-none-macosx_10_9_x86_64.whl"}
 torchvision = {url="https://download.pytorch.org/whl/cpu/torchvision-0.17.0-cp39-cp39-macosx_10_13_x86_64.whl"}
 tqdm = "^4.66.5"
+pyarrow = "^17.0.0"
 
 [tool.poetry.dev-dependencies]
 
