--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ torch = {url="https://download.pytorch.org/whl/cpu/torch-2.2.0-cp39-none-macosx_
 torchvision = {url="https://download.pytorch.org/whl/cpu/torchvision-0.17.0-cp39-cp39-macosx_10_13_x86_64.whl"}
 tqdm = "^4.66.5"
 pyarrow = "^17.0.0"
+catboost = "^1.2.5"
 
 [tool.poetry.dev-dependencies]
 
