--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ resources/
 notebooks/catboost_info
 models/cnn_2.pth
 models/cnn_3.pth
+models/cnn_4.pth
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
