--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@ models/cnn_2.pth
 models/cnn_3.pth
 models/cnn_4.pth
 models/cnn_5.pth
-models/vgg11_last_layer.pth
+models/vgg11*.pth
+models/vgg16*.pth
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
